--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
 
   <body>
     <noscript>
-
     </noscript>
+
+    <h1>Элементы таблицы Менделеева</h1>
+    <ol class="periodic"></ol>
+
     <div id="root"></div>
 
   </body>
